# c--static-analyzer

./: .gitignore  LICENSE  README.md  graphviz.dot
Lexer/: CMakeLists.txt  main.cpp
Lexer/FiniteMachines/: CharLiteralFiniteMachine.cpp  CharLiteralFiniteMachine.h  CommentsFiniteMachine.cpp  CommentsFiniteMachine.h  FiniteStateMachine.cpp  FiniteStateMachine.h  IdentifiersFiniteMachine.cpp  IdentifiersFiniteMachine.h  NumbersFiniteMachine.cpp  NumbersFiniteMachine.h  OperatorsStateMachine.cpp  OperatorsStateMachine.h  PreprocessorFiniteMachine.cpp  PreprocessorFiniteMachine.h  ReservedWordsFiniteMachine.cpp  ReservedWordsFiniteMachine.h  StringLiteralFiniteMachine.cpp  StringLiteralFiniteMachine.h  TrieBasedFiniteMachine.cpp  TrieBasedFiniteMachine.h
Lexer/Tokens/: CommentToken.h  PreprocessorToken.h  Token.h
Lexer/Utils/: LiteralStatesHandlers.cpp  LiteralStatesHandlers.h  OutFormats.h  SingletonFiniteMachineFabric.h  TokenRecognizer.h  string-utils.h  trie.h
